<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/offer"
        android:title="@string/offers"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/ntg"
        android:title=""
        android:checked="false"
        android:checkable="false"
        android:enabled="false" />

    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_notification"
        android:title="@string/alerts"
        app:showAsAction="withText"/>


    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:showAsAction="withText"/>

</menu>
