<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">



                <TextView
                     android:fontFamily="@font/neosans_pro_regular"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sdp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout"
                android:layout_height="?attr/actionBarSize"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:background="@color/white"
                android:layout_width="match_parent">


                <ImageView
                    android:id="@+id/img_back"
                    android:layout_gravity="left"
                    android:src="@drawable/ic_orangebacks"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"/>

                <TextView
                    android:id="@+id/txt_back"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textColor="@color/vendororange"
                    android:text="Settings" />

                <TextView
                    android:layout_marginLeft="@dimen/_100sdp"
                    android:id="@+id/textView"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/vendorprimerycolor"
                    android:text="FAQs" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1.1"
                    android:layout_gravity="right"
                    android:src="@drawable/questionmark"
                    app:civ_border_color="@color/vendororange"
                    android:layout_width="@dimen/_60sdp"
                    app:civ_border_width="@dimen/_2sdp"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/neosans_pro_regular"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/vendorprimerycolor"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sdp"
                    android:text="Frequently Asked Questions"/>

            </LinearLayout>
  <LinearLayout
                 android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

  </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/question1"
                        android:drawableRight="@drawable/ic_baseline_expand"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/question1"/>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/ans1"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/ans1"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/grey_400"/>

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/tv1"
                        android:drawableRight="@drawable/ic_baseline_expand"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/question2" />

                    <TextView
                        android:id="@+id/tv_11"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/ans2"
                        android:visibility="gone" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/grey_400"/>

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/question3"
                        android:drawableRight="@drawable/ic_baseline_expand"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/question3" />

                    <TextView
                        android:id="@+id/ans3"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/ans3"
                        android:visibility="gone" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/grey_400"/>

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">



                    <TextView
                        android:drawablePadding="@dimen/_10sdp"
                        android:id="@+id/question4"
                        android:drawableRight="@drawable/ic_baseline_expand"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/question4" />

                    <TextView
                        android:id="@+id/ans4"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/ans4"
                        android:visibility="gone" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/grey_400"/>

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">



                    <TextView
                        android:drawablePadding="@dimen/_10sdp"
                        android:id="@+id/question5"
                        android:drawableRight="@drawable/ic_baseline_expand"
                        android:padding="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/neosans_pro_regular"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/question5" />

                    <LinearLayout
                        android:id="@+id/ans5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <TextView
                            android:padding="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/neosans_pro_regular"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/album_title"
                            android:textSize="@dimen/_14sdp"
                            android:text="@string/ans5a" />
                        <TextView
                            android:padding="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/neosans_pro_regular"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/album_title"
                            android:textSize="@dimen/_14sdp"
                            android:text="@string/ans5b" />



                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/grey_400"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</FrameLayout>